# ros_generic_comm_manager

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/gcm/: NetworkDriver.h  NetworkMessage.h
include/gcm/drivers/: EthernetNetworkDriver.h  SerialNetworkDriver.h
include/gcm/drivers/ethernet/: TCPDriver.h  UDPDriver.h
include/gcm/drivers/serial/: RS232Driver.h
msg/: NetworkMessage.msg
src/: gcm_node.cpp
src/drivers/ethernet/: TCPDriver.cpp  UDPDriver.cpp
src/drivers/serial/: RS232Driver.cpp
srv/: CreateRS232Comm.srv  CreateTCPComm.srv  CreateUDPComm.srv
test/: TestUDPDriver.cpp  main.cpp
test/gcm/drivers/ethernet/: TestRS232Driver.cpp  TestRS232Driver.h  TestTCPDriver.cpp  TestTCPDriver.h  TestUDPDriver.cpp  TestUDPDriver.h
